--- a/udecide/create.html
+++ b/udecide/create.html
@@ -113,10 +113,10 @@ with (thisform)
 <body>
     <div class="container" style="background-color: #EEE; margin-bottom: 30px">
     <!--Side bar-->
-    <a href="index.html"><img src="img/udecide_logo6.png" class="logo"/></a>
+    <a href="login.php"><img src="img/udecide_logo6.png" class="logo"/></a>
     <!--Survey menu-->
     <ul class="nav hidden-tablet hidden-phone">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="login.php">Home</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="examples.html">Examples</a></li>
             <li><a href="contact.html">Contact us</a></li>
