--- a/udecide/index.html
+++ b/udecide/index.html
@@ -89,7 +89,7 @@
     <form action="test.php" method="post">
     <input name="username" type="text" placeholder="User" style="position: relative; top: 65px; left: 50px; display: block;">
     <input name="passwd" type="password" placeholder="Password" style="position: relative; top: 80px; left: 50px; display: block;">
-	<button type="submit" class="btn btn-large btn-primary" type="button" style="position: relative; top: 100px; left: 50px;">Log in</button>
+	<button type="submit" class="btn btn-large btn-primary" style="position: relative; top: 100px; left: 50px;">Log in</button>
     <button class="btn btn-large btn-primary" type="button" style="position: relative; top: 100px; left: 75px;">Sign up</button>
     </form>
     </div>
