--- a/udecide/examples.html
+++ b/udecide/examples.html
@@ -81,7 +81,7 @@
     </ul>
     </div>
     <div class="container">
-    <a href="car01.html"><div class="item">
+    <a href="survey.php?id=1"><div class="item">
     	<img src="img/audi-logo.png" class="surveylogo" /><img src="img/bmw-logo.png" class="surveylogo"  />
         <div class="surveydes">
         <p class="lead">Survey: Luxury Car Brands</p>
@@ -91,7 +91,7 @@
     </div></a>
     </div>
     <div class="container">
-    <a href="phone01.html"><div class="item">
+    <a href="survey.php?id=2"><div class="item">
     	<img src="img/apple-logo.png" class="surveylogo" /><img src="img/samsung-logo.png" class="surveylogo"  />
         <div class="surveydes">
         <p class="lead">Survey: Smart Phone Brands</p>
